[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
handlebars = "4.3.6"
regex = "1.8.1"
reqwest = "0.11.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", default-features = false, features = ["macros", "rt-multi-thread"] }
